--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true
   },
   "scripts": {
-    "dev": "node app.ts",
+    "dev": "tsc --project './tsconfig.json' --watch & NODE_ENV=development nodemon dist/src/providers/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +23,12 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20",
+    "pino": "^8.6.1"
   }
 }
